--- a/SEA_Application/Views/Admin_Dashboard/TeacherRegister.cshtml
+++ b/SEA_Application/Views/Admin_Dashboard/TeacherRegister.cshtml
@@ -304,7 +304,7 @@
                             @using (Html.BeginForm("TeacherRegister", "Admin_Dashboard", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
                             {
                                 @Html.AntiForgeryToken()
-                            <div class="col-md-5 pl-5 pr-5" >
+                            <div class="col-md-8 pl-5 pr-5" >
                                 <h2 class="column-heading mb-4">User Information</h2>
 
                                 <div class="form-group bmd-form-group is-filled" >
@@ -388,7 +388,7 @@
                                 </div>
 
 
-                                <button type="submit" id="FormSubmit" class="btn btn-primary pull-right rounded rounded-lg"> Register </button>
+                                <button type="submit" id="FormSubmit" class="btn btn-primary pull-right rounded rounded-lg"> Save </button>
                                 <button type="button" id="cancel" onclick="redirect()" class="btn btn-primary pull-right rounded rounded-lg bg-transparent text-muted shadow-none mr-3">
                                     <i class="material-icons mr-2">cached</i>  Cancel   
                                 </button>
