--- a/SEA_Application/Views/AspNetSession/Create.cshtml
+++ b/SEA_Application/Views/AspNetSession/Create.cshtml
@@ -18,19 +18,29 @@
 }
 
 <head>
-    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
-    
-    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
-    
+    @*<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
 
-    
+    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
+
+
+
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-    
-    <script src="//netdna.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
-    </head>
+
+    <script src="//netdna.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>*@
+</head>
 
 <script>
     $(document).ready(function () {
+
+
+        $("#PageHeader").html("Add Session");
+
+        $("#BreadCrumbs").append(' <li> <a href="/Account/Dashboard"> Home </a> <span>&gt;</span></li>');
+        $("#BreadCrumbs").append(' <li> <a href="/AspNetSession/Index">Session </a> <span>&gt;</span></li>');
+        $("#BreadCrumbs").append(' <li class="active"><a id="BreadCrumps1" href="#">Create</a></li>');
+
+
+
         $("#SessionName").prop('required', true);
         $("#Status").prop('required', true);
         $("#SessionStartDate").prop('required', true);
@@ -38,15 +48,15 @@
         $("#SessionEndDate").prop('required', true);
         $("#SessionEndDate").prop('type', 'date');
 
-     $("form").submit(function(){
-            
-                  $("#submit").attr("disabled", true);
+        $("form").submit(function () {
+
+            $("#submit").attr("disabled", true);
 
 
 
 
-          });
-     
+        });
+
         //$('#Status').click(function () {
         //    debugger;
         //    var Status = $(this).val();
@@ -109,73 +119,76 @@
     }
 
 </script>
-<label>@Html.ActionLink("Home", "Dashboard", "Account") > @Html.ActionLink("Session", "Index", "AspNetSession") > <a href="#"><b>Create</b></a> </label>
-<h4 class="orange">Create </h4>
-@*<div class="row" style="padding-bottom: 10px; padding-top: 10px; padding-left: 20px; padding-right: 20px;">
-        <button class="btn btn-danger pull-left btn-sm" onclick="onCancel()">
-            Cancel
-        </button>
-        <button class="pull-right" style="background-color: transparent; border: none; outline: none; font-size: 20px; color: rgb(89, 89, 89) !important" onclick="onSave()">
-            <i class="fa fa-floppy-o"></i>
-        </button>
-    </div>*@
-@using (Html.BeginForm())
-{
-    @Html.AntiForgeryToken()
+
+<div class="row">
+    <div class="col-md-12">
+        <div class="card">
+            <div class="card-body p-5">
+                @using (Html.BeginForm())
+                {
+                    @Html.AntiForgeryToken()
 
 
-    <div class="box box-primary">
-        <div class="box-title"></div>
+                    <div class="col-md-8 pl-5 pr-5 ">
+                        <h2 class="column-heading mb-4">Create Session</h2>
 
-        <div class="box-body">
-            <div class="form-horizontal">
-                <h4> Start Session</h4>
-                <hr />
-                @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-                <div class="form-group">
-                    <label class="col-md-1 col-lg-1 control-label" for="UserName">Session Name: <span class="red-mark">*</span></label>
-                    <div class="col-md-6">
-                        @Html.EditorFor(model => model.SessionName, new { htmlAttributes = new { @class = "form-control" } })
+                        <div class="form-group bmd-form-group is-filled">
+
+                            <label class="bmd-label-floating" for="UserName">Session Name: <span class="red-mark">*</span></label>
+
+                            @Html.EditorFor(model => model.SessionName, new { htmlAttributes = new { @class = "form-control" } })
+                        </div>
+
+
+                        <div class="form-row mt-4">
+                            <div class="form-group col-md-12 bmd-form-group">
+                                <label for="" class="bmd-label-static pl-2">Session Start Date* </label>
+
+                                @Html.EditorFor(model => model.SessionStartDate, new { htmlAttributes = new { @class = "form-control", @onblur = "isempty(this)" } })
+                                @Html.ValidationMessageFor(model => model.SessionStartDate, "", new { @class = "text-danger" })
+
+                            </div>
+                        </div>
+
+                        <div class="form-row mt-4">
+                            <div class="form-group col-md-12 bmd-form-group">
+                                <label for="" class="bmd-label-static pl-2">Session End Date* </label>
+
+                                @Html.EditorFor(model => model.SessionEndDate, new { htmlAttributes = new { @class = "form-control", @onblur = "isempty(this)" } })
+                                @Html.ValidationMessageFor(model => model.SessionEndDate, "", new { @class = "text-danger" })
+
+                            </div>
+                        </div>
+
+                        <div class="form-group bmd-form-group is-filled">
+
+                            <label class="bmd-label-floating">Total Fee: <span class="red-mark">*</span></label>
+
+                            @Html.EditorFor(model => model.Total_Fee, new { htmlAttributes = new { @class = "form-control", @onblur = "isempty(this)", required = "required" } })
+                            @Html.ValidationMessageFor(model => model.Total_Fee, "", new { @class = "text-danger" })
+                        </div>
+
+
+
+                    </div><!--end of column 8-->
+
+                    <div class="col-md-8 pl-5 pr-5 ">
+                        <button type="submit" class="btn btn-primary rounded rounded-lg"> Save </button>
+
+
+                        <button type="button" id="cancel" class="btn btn-primary rounded rounded-lg bg-transparent text-muted shadow-none mr-3">
+                            <i class="material-icons mr-2">cached</i>  Cancel
+                        </button>
+
+
+
                     </div>
-                </div>
-                <div class="form-group">
-                    <label class="col-md-1 col-lg-1 control-label" for="UserName">Session Start Date: <span class="red-mark">*</span></label>
-                    <div class="col-md-6">
-                        @*@Html.TextBoxFor(model => model.SessionStartDate, new { @class = "form-control control-text datePicker", @onblur = "isempty(this)", @id = "IssueDate" })*@
-                        @Html.EditorFor(model => model.SessionStartDate, new { htmlAttributes = new { @class = "form-control", @onblur= "isempty(this)"} })
-                        @Html.ValidationMessageFor(model => model.SessionStartDate, "", new { @class = "text-danger" })
-                    </div>
-                </div>
-                <div class="form-group">
-                    <label class="col-md-1 col-lg-1 control-label" for="UserName">Session End Date: <span class="red-mark">*</span></label>
-                    <div class="col-md-6">
-                        @Html.EditorFor(model => model.SessionEndDate, new { htmlAttributes = new { @class = "form-control", @onblur = "isempty(this)" } })
-                        @Html.ValidationMessageFor(model => model.SessionEndDate, "", new { @class = "text-danger" })
-                    </div>
-                </div>
-                <div class="form-group">
-                    <label class="col-md-1 col-lg-1 control-label" for="UserName">Total Fee: <span class="red-mark">*</span></label>
-                    <div class="col-md-6">
-                        @Html.EditorFor(model => model.Total_Fee, new { htmlAttributes = new { @class = "form-control", @onblur = "isempty(this)", required="required" } })
-                        @Html.ValidationMessageFor(model => model.Total_Fee, "", new { @class = "text-danger" })
-                    </div>
-                </div>
-                @*<div class="form-group">
-                    <label class="col-md-1 col-lg-1 control-label" for="UserName">Status: <span class="red-mark">*</span></label>
-                    <div class="col-md-6">
-                        @Html.DropDownListFor(model => model.Status, listItems, new { @class = "form-control" })
-                        @Html.ValidationMessageFor(model => model.Status, "", new { @class = "text-danger" })
-                    </div>
-                </div>*@
-                <hr />
-                <div class="form-group">
-                    <div class="col-md-offset-1 col-lg-offset-1 col-md-2">
-                        <input type="submit" value="Create" id="submit" class="btn btn-primary" />
-                        <button type="button" id="cancel" class="btn btn-default">Cancel</button>
-                    </div>
-                </div>
+                }
             </div>
-        </div>
+           
+                </div>
     </div>
+</div>
 
-}
+
+
