--- a/SEA_Application/Views/AspNetTimeslots/Create.cshtml
+++ b/SEA_Application/Views/AspNetTimeslots/Create.cshtml
@@ -5,94 +5,138 @@
     Layout = "~/Views/Shared/_AdminDashboardLayout.cshtml";
 }
 
+<div class="row">
+    <div class="col-md-12">
+        <div class="card">
+            <div class="card-body p-5">
 
-<label>@Html.ActionLink("Home", "Dashboard", "Account") > @Html.ActionLink("Room Slot", "Index", "AspNetTimeslots") > <a href="#"><b>Create</b></a> </label>
+                @using (Html.BeginForm())
+                {
+                    @Html.AntiForgeryToken()
 
-<h4 class="orange">Add Time Slot </h4>
+                <div class="col-md-8 pl-5 pr-5 ">
+                    <h2 class="column-heading mb-4">Room Slot</h2>
 
+                    <div class="form-group bmd-form-group is-filled">
 
-
-@using (Html.BeginForm())
-{
-    @Html.AntiForgeryToken()
-    <div class="box box-primary">
-        <div class="box-title"></div>
-
-        <div class="box-body">
-
-            <div class="form-horizontal">
-                <h4>Time Slot</h4>
-                <hr />
-                @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-                <div class="form-group">
-                    <label class="control-label col-md-2">Name</label>
-                    <div class="col-md-4">
-                        @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control" } })
+                        <label class="bmd-label-floating"> Room Slot</label>
+                        @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control", @required = "true" } })
                         @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
+
                     </div>
-                </div>
 
-                <div class="form-group">
 
-                    <label class="control-label col-md-2">Start Time</label>
-                    <div class="col-md-4">
 
+
+                    @*<div class="form-group ">
+
+
+            <label class="bmd-label-floating"> Start Time</label>
+
+            <input type="datetime-local" name="Start_Time" class="form-control">
+
+        </div>*@
+
+                    @*<div class="form-group  bmd-form-group">
+
+                        <label class="bmd-label-static pl-8"> Start Time</label>
 
                         <input type="datetime-local" name="Start_Time" class="form-control">
+                    </div>*@
 
+                    <div class="form-row mt-4">
+                        <div class="form-group col-md-12 bmd-form-group">
+                            <label for="" class="bmd-label-static pl-2">Start Time </label>
+          
+                            <input type="datetime-local" name="Start_Time" class="form-control" required>
 
-
-                        @*@Html.EditorFor(model => model.Start_Time, new { htmlAttributes = new { @class = "form-control date" } })
-                            @Html.ValidationMessageFor(model => model.Start_Time, "", new { @class = "text-danger" })*@
+                        </div>
                     </div>
-                </div>
 
-                <div class="form-group">
-                    <label class="control-label col-md-2">End Time</label>
+                    <div class="form-row mt-4">
+                        <div class="form-group col-md-12 bmd-form-group">
+                            <label for="" class="bmd-label-static pl-2">End Time </label>
+                            <input type="datetime-local" name="End_Time" class="form-control" required>
 
-                    <div class="col-md-4">
-
-
-                        <input type="datetime-local" name="End_Time" class="form-control">
-
-
-                        @*@Html.EditorFor(model => model.End_Time, new { htmlAttributes = new { @class = "form-control date" } })
-                            @Html.ValidationMessageFor(model => model.End_Time, "", new { @class = "text-danger" })*@
+                        </div>
                     </div>
-                </div>
 
-                <div class="form-group">
-                    @Html.LabelFor(model => model.Minutes, htmlAttributes: new { @class = "control-label col-md-2" })
-                    <div class="col-md-4">
-                        @Html.EditorFor(model => model.Minutes, new { htmlAttributes = new { @class = "form-control" } })
+                    @*<div class="form-group bmd-form-group is-filled">
+
+
+            <label class="bmd-label-floating"> End Time</label>
+
+            <input type="datetime-local" name="End_Time" class="form-control">
+
+        </div>*@
+
+                    @*<div class="form-group  bmd-form-group">
+                        <div>
+
+                            <label class="bmd-label-static pl-8"> End Time</label>
+
+                            <input type="datetime-local" name="End_Time" class="form-control">
+
+                        </div>
+
+                    </div>*@
+
+
+
+                    <div class="form-group bmd-form-group is-filled">
+
+
+                        @Html.LabelFor(model => model.Minutes, htmlAttributes: new { @class = "bmd-label-floating" })
+                        @Html.EditorFor(model => model.Minutes, new { htmlAttributes = new { @class = "form-control",@required = "true" } })
                         @Html.ValidationMessageFor(model => model.Minutes, "", new { @class = "text-danger" })
-                    </div>
-                </div>
 
-                <div class="form-group">
-                    <div class="col-md-offset-2 col-md-10">
-                        <input type="submit" value="Create" class="btn btn-primary" />
-                        <button type="button" id="cancel" class="btn btn-default">Back</button>
                     </div>
-                </div>
+
+
+
+
+                </div> <!--End of Column-->
+
+                    <div class="col-md-8 pl-5 pr-5 ">
+                        <button type="submit" class="btn btn-primary rounded rounded-lg"> Save </button>
+
+
+                        <button type="button" id="cancel"  class="btn btn-primary rounded rounded-lg bg-transparent text-muted shadow-none mr-3">
+                            <i class="material-icons mr-2">cached</i>  Cancel
+                        </button>
+
+
+
+                    </div>
+
+
+
+
+
+                }
+
+
             </div>
-
-
-        </div>
+                </div>
     </div>
+</div>
+                <script>
+                    $(document).ready(function () {
 
-}
 
-<script>
-    $(document).ready(function () {
+                        
+        $("#PageHeader").html("Add Time Slot");
 
-    
-        $("#cancel").click(function () {
-            
-        window.location.href = '/AspnetTimeSlots/index';
+        $("#BreadCrumbs").append(' <li> <a href="/Account/Dashboard"> Home </a> <span>&gt;</span></li>');
+        $("#BreadCrumbs").append(' <li> <a href="/AspnetTimeSlots/index"> Room Slot </a> <span>&gt;</span></li>');
+        $("#BreadCrumbs").append(' <li class="active"><a id="BreadCrumps1" href="#">Create</a></li>');
 
-    });
-    
-    })
+                        $("#cancel").click(function () {
 
-</script>
+                            window.location.href = '/AspnetTimeSlots/index';
+
+                        });
+
+                    })
+
+                </script>
